# tf-m-extras

./: .gitignore  readme.rst
docs/: CMakeLists.txt  conf.py  index.rst
docs/cmake/: FindSphinx.cmake
docs/examples/: example_partition.rst  examples.rst  index.rst
docs/examples/corstone310_fvp_dma/: clcd_example.rst  triggering_example.rst
docs/examples/tf-m-example-ns-app/: readme.rst
docs/examples/vad_an552/: vad_an552.rst
docs/partitions/: adac_impl_for_rse.rst  index.rst  partitions.rst  rse_image_verification.rst  scmi_comms.rst
docs/partitions/adac/: adac_impl_for_rss.rst  adac_integration_guide.rst  index.rst
docs/partitions/dice_protection_environment/: dice_protection_environment.rst
docs/partitions/dma350_unpriv_partition/: dma350_unpriv_partition.rst
docs/partitions/external_trusted_secure_storage/: external_trusted_secure_storage.rst
examples/: examples_readme.rst
examples/corstone310_fvp_dma/clcd_example/: CMakeLists.txt  corstone310_freertos.ld  readme.rst
examples/corstone310_fvp_dma/clcd_example/freertos-demo/: section_limits.c
examples/corstone310_fvp_dma/common/ext/freertos-kernel/: CMakeLists.txt
examples/corstone310_fvp_dma/dma350_ns/: CMakeLists.txt  corstone310_freertos.ld  readme.rst
examples/corstone310_fvp_dma/dma350_ns/freertos-demo/: corstone310_freertos.sct
examples/corstone310_fvp_dma/dma350_s/: CMakeLists.txt  dma350_s_test.c  dma350_s_test.h  readme.rst
examples/corstone310_fvp_dma/privileged_example/: CMakeLists.txt  clcd_dma_wrapper.c  device_definitions.c  main_ns.c  picture_bitmap.c  readme.rst  systimer_armv8-m_timeout.c  timeout.h
examples/corstone310_fvp_dma/triggering_example/: CMakeLists.txt  readme.rst
examples/corstone310_fvp_dma/unprivileged_example/: CMakeLists.txt  device_definition.c  main_ns.c  readme.rst
examples/example_partition/: CMakeLists.txt  tfm_example_manifest_list.yaml  tfm_example_partition.c  tfm_example_partition.yaml
examples/extra_test_suites/dma350_s/: CMakeLists.txt  dma350_s_test.c  readme.rst
examples/extra_test_suites/extra_ns/: ns_test.h
examples/extra_test_suites/extra_s/: s_test.c
examples/extra_test_suites_example/extra_ns/: CMakeLists.txt  ns_test.c
examples/extra_test_suites_example/extra_s/: CMakeLists.txt  s_test.h
examples/tf-m-example-ns-app/: CMakeLists.txt  main.c  readme.rst
examples/vad_an552/: readme.rst
examples/vad_an552/ns_side/: CMakeLists.txt  main_ns.c  project_config.h
examples/vad_an552/ns_side/ext/freertos-ota-pal-psa/: 0001-Chunk-writing-added-for-otaPal_WriteBlock.patch  CMakeLists.txt
partitions/: partitions_readme.rst
partitions/adac/: CMakeLists.txt  adac.c  adac_req_mngr.c  tfm_adac.yaml
partitions/delegated_attestation/: CMakeLists.txt  delegated_attest.c  delegated_attest_integration_guide.rst  delegated_attest_req_mngr.c  delegated_attestation_manifest_list.yaml  tfm_delegated_attestation.yaml
partitions/delegated_attestation/test/: delegated_attest_test.c  delegated_attest_test.h
partitions/delegated_attestation/test/non_secure/: CMakeLists.txt  delegated_attest_ns_interface_testsuite.c
partitions/delegated_attestation/test/secure/: CMakeLists.txt  delegated_attest_s_interface_testsuite.c
partitions/dice_protection_environment/: CMakeLists.txt  dice_protection_environment.rst  dpe_boot_data.c  dpe_boot_data.h  dpe_certificate.c  dpe_certificate.h  dpe_cmd_decode.c  dpe_context_mngr.c  dpe_context_mngr.h  dpe_crypto_config.h  dpe_crypto_interface.c  dpe_crypto_interface.h  dpe_impl.c  dpe_impl.h  dpe_log.c  dpe_log.h  dpe_req_mngr.c  tfm_dpe.yaml
partitions/dice_protection_environment/test/: dpe_certificate_decode.c  dpe_certificate_decode.h  dpe_certify_key_test.c  dpe_complex_sequence_test.c  dpe_derive_child_test.c  dpe_derive_context_test.c  dpe_get_certificate_chain_test.c  dpe_test.c  dpe_test.h  dpe_test_cmd_encode.c  dpe_test_common.c  dpe_test_common.h  dpe_test_data.c  dpe_test_data.h  dpe_test_private.h
partitions/dice_protection_environment/test/host/: CMakeLists.txt  client.c  cmd.c  cmd.h  main.c  plat.c  root_keys.c  root_keys.h
partitions/dice_protection_environment/test/non_secure/: CMakeLists.txt  dpe_ns_interface_testsuite.c
partitions/dma350_unpriv_partition/: CMakeLists.txt  extra_manifest_list.yaml  tfm_dma350_example_partition.c  tfm_dma350_unpriv_partition_readme.rst
partitions/dma350_unpriv_partition/dma350_lib/: dma350_lib_unprivileged.h
partitions/dtpm_client/: CMakeLists.txt  dtpm_client.c  dtpm_client.h  dtpm_client.yaml  dtpm_client_manifest_list.yaml  dtpm_client_partition_hal.h  dtpm_client_req_mngr.c
partitions/dtpm_client/interface/: dtpm_client_api.c
partitions/dtpm_client/interface/include/: dtpm_client_api.h
partitions/dtpm_client/test/secure/: CMakeLists.txt  dtpm_client_s_testsuite.c
partitions/external_trusted_secure_storage/: etss_manifest_list.yaml
partitions/external_trusted_secure_storage/docs/: etss_readme.rst
partitions/measured_boot/: CMakeLists.txt  measured_boot.c  measured_boot_manifest_list.yaml  measured_boot_req_mngr.c  measured_boot_utils.c  tfm_measured_boot.yaml
partitions/rse_image_verification/: CMakeLists.txt  public_key_encoding_helper.h  rse_image_verification_manifest_list.yaml  rse_image_verification_req_mngr.c  tfm_rse_image_verification.yaml
partitions/rse_image_verification/test/secure/: CMakeLists.txt  mcuboot_test_helpers.c  mcuboot_test_helpers.h  rse_image_verification_s_interface_testsuite.c  signature_encoding_helper.h  st_test_helpers.c  st_test_helpers.h
partitions/runtime_provisioning/: CMakeLists.txt  runtime_provisioning.c  runtime_provisioning.yaml  runtime_provisioning_hal.h  runtime_provisioning_manifest_list.yaml
partitions/scmi/: CMakeLists.txt  scmi_comms.c  scmi_comms.h  scmi_comms.yaml  scmi_hal.h  scmi_protocol.h
partitions/scmi/test/secure/: CMakeLists.txt  scmi_comms.yaml  scmi_comms_manifest_list.yaml  scmi_s_testsuite.c
partitions/scmi/test/secure/hal/: scmi_hal_defs.h  scmi_test_hal.c
partitions/vad_an552_sp/: CMakeLists.txt  vad_an552_sp_main.c
(+34 files in other folders)
